<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edtName"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/edittext_background"
        android:drawableStart="@drawable/name"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/edtName"
        android:inputType="text"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/lightBrown"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSign" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/top_background"
        app:layout_constraintBottom_toTopOf="@+id/txtSign"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        tools:srcCompat="@drawable/top_background" />

    <TextView
        android:id="@+id/txtSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/txtSign"
        android:textColor="@color/pink"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/edittext_background"
        android:drawableStart="@drawable/email"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/edtEmail"
        android:inputType="text"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/lightBrown"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtName" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/edittext_background"
        android:drawableStart="@drawable/password"
        android:drawablePadding="16sp"
        android:ems="10"
        android:hint="@string/edtPassword"
        android:inputType="text"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/lightBrown"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnWelcome"
        style="@android:style/Widget.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:background="@drawable/button_background"
        android:text="@string/btnSign"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnWelcome">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnFB"
            style="@android:style/Widget.Button"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="0.5"
            android:background="@drawable/social_button_background"
            android:drawableEnd="@drawable/facebook"
            android:padding="8dp"
            android:text="@string/btnFB"
            android:textColor="@color/pink"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnG"
            style="@android:style/Widget.Button"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_weight="0.5"
            android:background="@drawable/social_button_background"
            android:drawableEnd="@drawable/google"
            android:padding="8dp"
            android:text="@string/btnG"
            android:textColor="@color/pink"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtQ1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:text="All ready user? Login"
        android:textColor="@color/pink"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>
